--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,11 @@ categories = ["libraries"]
 
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 
+[dev-dependencies]
+criterion = "0.3.4"
+
+[[bench]]
+name = "tiny_benchmark"
+harness = false
